--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <h1>Anthony P. Carnevale</h1>
- <img src="./Images/profile_picture.jpg" alt="Anthony's picture" height="100">
+ <img src="./Images/profile_picture.jpg" alt="Anthony's picture" height="200">
  <h2>Summary</h2> 
  <p>I'm a mechanical engineer, with a master deegree in industrial plants. <br>
     I have a passion for web development that's why a would like to try <br>
@@ -16,16 +16,55 @@
  <h2>Working experience</h2>
  <ul>
     <li><h3>Vertiv srl</h3>
-    <a href="./Working experience/01_Vertiv.html" target="_blank">Mechanical design engineer</a></li>
+        <h4>Period:</h4>
+        <p>From 02/2023 - ongoing</p>
+        <h4>Role:</h4>
+        <p> Mechanical design engineer</p>
+        <h4>Main activities:</h4>
+        <p><ul>
+            <li>3D modeling on PTC Creo parametric 8.0;</li>
+            <li>Copper busbars dimensioning;</li>
+            <li>Contact with suppliers to have quotations or to find with them the best solutions for the project</li>
+            <li>Help manufacturing during the assembly;</li>
+            <li>Coordinate and check the 2D drawins made from another office;</li>
+            <li>Item creation and managment on PD cloud software.</li>
+        </ul></p>
+    <a href="./Working experience/01_Vertiv.html" target="_blank">More details</a></li>
     <li><h3>SmartInnovation srl</h3>
-        <a href="./Working experience/02_SmartInnovation.html" target="_blank">Cad trainer and consultant</a></li>
+        <h4>Period:</h4>
+        <p>From 02/2023 - ongoing</p>
+        <h4>Role:</h4>
+        <p> Cad trainer and consultant</p>
+        <h4>Main activities:</h4>
+        <p> <ul>
+            <li>3D modeling on PTC Creo parametric (from 4.0 to 9.0);</li>
+            <li>2D drawings on PTC Creo parametric (from 4.0 to 9.0)</li>
+            <li>3D modeling on SolidWorks 2020;</li>
+            <li>2D drawings on SolidWorks 2020</li>
+            <li>Contact with suppliers to have quotations or to find with them the best solutions for the project</li>
+            <li>Teacher in CAD classes (software PTC Creo parametric)</li>
+            <li>Creo Parametric environment customizations;</li>
+        </ul></p>
+        <a href="./Working experience/02_SmartInnovation.html" target="_blank"></a>More details</li>
  </ul>
  <h2>Education</h2>
  <ul>
     <li><h3>Master degree in mechanical engineering</h3>
-    <p>Vote:99/110</p></li>
+        <h4>Where:</h4>
+        <p>Almamater Studiorium di Bologna</p>
+        <h4>Period:</h4>
+        <p>2017 - 2023</p>
+        <h4>Vote:</h4>
+        <p>99/110</p>
+    </li>
     <li><h3>Bachelor degree in mechanical engineering</h3>
-        <p>Vote:98/110</p></li>
+        <h4>Where:</h4>
+        <p>Università degli Studi della Calabria</p>
+        <h4>Period:</h4>
+        <p>2011 - 2017</p>
+        <h4>Vote:</h4>
+        <p>98/110</p>
+    </li>
  </ul>  
 </body>
 </html>
