--- a/Working experience/01_Vertiv.html
+++ b/Working experience/01_Vertiv.html
@@ -16,6 +16,8 @@
     <p>02/2023 - on going</p>
     <h3>Description:</h3>
     <p>I'm working here since february 2022 as a mechanical designer <br>
-    for the design of, mainly, UPSs.</p>
+    for the design of, mainly, UPSs. <br>
+    What I do normally is to cooperate with other teams, mainly the sfotware and electrical engineering teams, 
+    in order to find solutions to reach the goals we recieved from our customer or from corporate. </p>
 </body>
 </html>
