--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li>Teacher in CAD classes (software PTC Creo parametric)</li>
             <li>Creo Parametric environment customizations;</li>
         </ul></p>
-        <a href="./Working experience/02_SmartInnovation.html" target="_blank"></a>More details</li>
+        <a href="./Working experience/02_SmartInnovation.html" target="_blank">More details</a></li>
  </ul>
  <h2>Education</h2>
  <ul>
