--- a/Working experience/02_SmartInnovation.html
+++ b/Working experience/02_SmartInnovation.html
@@ -13,7 +13,7 @@
     <h2>Role:</h2>
     <p>Cad trainer and consultant</p>
     <h2>Period:</h2>
-    <p>09/2020 - 01/2023</p>
+    <p>From 09/2020 to 01/2023</p>
     <h3>Description:</h3>
     <p>I've worked here for almost 3 years and here is where I've learnt <br>
     a working methodology and a great usage of CAD PTC Creo parametric</p>
