--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <img src="./Images/profile_picture.jpg" alt="Anthony's picture" height="200">
  <h2>Summary</h2> 
  <p>I'm a mechanical engineer, with a master deegree in industrial plants. <br>
-    I have a passion for web development that's why a would like to try <br>
-    a new job in this field.
+    I have a passion for web development that's why a would like to try a new job in this field. <br>
+    I'm curious and generally with a positive approach to life.
  </p>
  <h2>Working experience</h2>
  <ul>
@@ -32,7 +32,7 @@
     <a href="./Working experience/01_Vertiv.html" target="_blank">More details</a></li>
     <li><h3>SmartInnovation srl</h3>
         <h4>Period:</h4>
-        <p>From 02/2023 - ongoing</p>
+        <p>From 02/2020 to 02/2023</p>
         <h4>Role:</h4>
         <p> Cad trainer and consultant</p>
         <h4>Main activities:</h4>
@@ -46,7 +46,21 @@
             <li>Creo Parametric environment customizations;</li>
         </ul></p>
         <a href="./Working experience/02_SmartInnovation.html" target="_blank">More details</a></li>
- </ul>
+        <li><h3>Ecotec srl</h3>
+            <h4>Period:</h4>
+            <p>From 08/2019 to 08/2020</p>
+            <h4>Role:</h4>
+            <p> Assistant to manufacturing manager</p>
+            <h4>Main activities:</h4>
+            <p> <ul>
+                <li>3D modeling on SolidWorks;</li>
+                <li>2D drawings on Solidworks</li>
+                <li>Contact with suppliers to have quotations or to find with them the best solutions for the project;</li>
+                <li>Activity planning for teams around 8 people;</li>
+                <li>On job supervion.</li>
+            </ul></p>
+            <a href="./Working experience/03_Ecotec.html" target="_blank">More details</a></li>    
+    </ul>
  <h2>Education</h2>
  <ul>
     <li><h3>Master degree in mechanical engineering</h3>
